# claudecode-telegram

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  OPERATIONAL_VERIFICATION.md  README.md  VERIFICATION_SUMMARY.md  bridge.py  deploy-verify.sh  docker-compose.yml  pyproject.toml  test_reverse_proxy.py
.prd/: 01-compose.json  02-https-reverse-proxy.json  03-telegram-webhook.json  04-telegram-allowlist.json  05-env-docs.json  PRD.md
githooks/: pre-commit
tests/: test_allowed_user_ids.py  test_bridge_network.py  test_dm_allowed_user_id.py  test_docker.py  test_https_connectivity.py  test_https_redirect.py  test_network_isolation.sh  test_network_isolation_simple.sh  test_token_protection.py  test_webhook_management.py  test_webhook_path.py  test_webhook_secret.py
